# CodingJEPA

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.eval  MODEL_CARD.md  Makefile  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: changelog.yml  docker.yml  eval-smoke.yml  lint.yml  nightly.yml  perf.yml  safety.yml  unit.yml
LICENSES/: PSF-2.0.txt
codingjepa/: __init__.py  __main__.py  _jsonschema.py  cli.py  errors.py  model.py
codingjepa/baselines/: __init__.py  bm25.py  codebert.py  mlm_encoder.py
codingjepa/data/: __init__.py  audit.py  chunker.py  cli.py  dedup.py  manifest.py  mirror.py  normalize.py  pairs.py  secrets_scan.py  sequences.py  splits.py  tokenizer.py
codingjepa/demo/: __init__.py  cli.py  diff.py  messages.py
codingjepa/eval/: __init__.py  confusions.py  diff_gallery.py  figures.py  harness.py  memo.py  pools.py  sandbox.py  schema.py  stats.py
codingjepa/inference/: __init__.py  confidence.py  embed.py  index.py  rerank.py  retrieve.py
codingjepa/intents/: __init__.py  acceptance.py
codingjepa/modules/: __init__.py  ar_predictor.py  encoder.py  intent_embedder.py  pred_proj.py  projector.py  sigreg.py
codingjepa/observability/: __init__.py  log.py  redact.py  request_id.py
codingjepa/safety/: __init__.py  filter.py  messages.py  secret_patterns.py
codingjepa/training/: __init__.py  callbacks.py  dataloader.py  logging.py  manager.py  module.py  optimizer.py  preflight.py
config/: config.yaml
config/data/: finetune.yaml  pretrain.yaml
config/loss/: sigreg.yaml
config/model/: coding_jepa.yaml
config/optimizer/: adamw.yaml
config/train/: finetune.yaml  pretrain.yaml
data/schemas/: audit.schema.json  cross_split_leakage.schema.json  dedup.schema.json  gold.schema.json  log.schema.json  manifest.schema.json  model_card.schema.json  pool.schema.json  results.schema.json  splits.schema.json
docs/: goal.md
examples/: demo-cpython-extract-helper.py
paper/: Makefile  main.tex  refs.bib
tests/: conftest.py  test_acceptance_singleton.py  test_baselines.py  test_errors.py  test_hydra_resolve.py  test_invariants.py  test_log_redaction.py  test_log_schema.py  test_model_card.py  test_refusal_messages.py  test_request_id_propagation.py  test_schemas.py  test_secret_patterns.py
tools/: assert_no_secrets.py  assert_trufflehog_clean.py  hf_convert.py  model_card_update.py  notice_gen.py
(+135 files in other folders)
