[project]
name = "codingjepa"
version = "0.0.0"
description = "Joint-Embedding Predictive Architecture for Python code."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }
authors = [{ name = "CodingJEPA contributors" }]
keywords = ["jepa", "code", "representation-learning", "refactoring"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core training stack — RFC-0013 §D3.
    "torch>=2.4",
    "lightning>=2.4",
    "hydra-core",
    "omegaconf",
    "wandb",
    # Code-modality stack.
    "libcst",
    "sentencepiece",
    "pydriller",
    # Normalization toolchain (RFC-0012 §D5): black + isort are runtime deps because
    # `codingjepa.data.normalize` calls them on every chunk during dataset assembly.
    "black",
    "isort>=5",
    # Retrieval and baselines.
    "faiss-cpu",
    "rank_bm25",
    "transformers",
    # Eval-sandbox runner (RFC-0010 §D2 E3 — pytest is a runtime dep, not dev-only).
    "pytest",
    "pytest-xdist",
    # Demo.
    "pygments",
    "fastapi",
    "htmx",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    # scipy is dev-only: codingjepa.eval.stats is a numpy-only implementation;
    # scipy is used by the bootstrap comparison test (RFC-0010 §D7 acceptance).
    "scipy",
]

[project.scripts]
codingjepa = "codingjepa.cli:main"

[project.urls]
Homepage = "https://github.com/AbdelStark/CodingJEPA"
Repository = "https://github.com/AbdelStark/CodingJEPA"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codingjepa"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["LeWorldModel"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "LeWorldModel"

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["LeWorldModel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running test, deselected by default in `make test` and the `unit` CI workflow",
    "eval-smoke: 10-example eval-fixture test exercised by the `eval-smoke` CI workflow",
]
